fix(project-factory): refresh the current-register file on download, not on delete
    Deleting a register left the file the console serves untouched. That file is a
    snapshot of campaign_data written when it was last uploaded, so the deleted
    register kept coming back on every download.

    The delete now only marks the file out of date, keeping filestore and workbook
    work off the Kafka listener thread. The download that needs the file does the
    rewrite and returns the new fileStoreId in the same response, so a sheet still
    listing a deleted register is never handed over — and when the refresh cannot
    vouch for a file, no id is returned rather than a stale one.

    One worker per file: the claim moves pending to inProgress in a single
    conditional update, and a claim past its lease can be taken over, so a crash
    mid-rewrite cannot strand it.

    HCMPRE-2143